[gd_scene load_steps=10 format=3 uid="uid://b461p3bqnqj00"]

[ext_resource type="Texture2D" uid="uid://b2nkvptwraxnx" path="res://assets/Objects/Basic Grass Biom things 1.png" id="1_5dbhg"]
[ext_resource type="Script" path="res://characters/scripts/tree.gd" id="1_oj563"]
[ext_resource type="Shader" uid="uid://b0n7xn6aladen" path="res://characters/scenes/treeShake.tres" id="2_58qrr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6pvd1"]
resource_local_to_scene = true
shader = ExtResource("2_58qrr")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5n6v8"]
size = Vector2(10, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_juh4r"]
size = Vector2(22, 34)

[sub_resource type="Animation" id="Animation_u2dqp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8arka"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.000191095, 0.0194917, 0.0432448, 0.0697497, 0.100285, 0.140187, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0), Vector2(1, 0), Vector2(0.5, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pkpi"]
_data = {
"RESET": SubResource("Animation_u2dqp"),
"hit_flash": SubResource("Animation_8arka")
}

[node name="Tree" type="StaticBody2D"]
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, -11)
script = ExtResource("1_oj563")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6pvd1")
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_5dbhg")
region_enabled = true
region_rect = Rect2(16, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_5n6v8")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0.0352941, 1)
y_sort_enabled = true
offset_left = -6.0
offset_top = 23.0
offset_right = 114.0
offset_bottom = 50.0
scale = Vector2(0.1, 0.1)
max_value = 3.0
value = 3.0
show_percentage = false

[node name="Tree Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree Hitbox"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_juh4r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5pkpi")
}

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="Tree Hitbox" to="." method="_on_tree_hitbox_body_entered"]
[connection signal="body_exited" from="Tree Hitbox" to="." method="_on_tree_hitbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
